--- a/index.html
+++ b/index.html
@@ -18,27 +18,28 @@
             <p class="header__title-text header__title-text_color">For Business</p>
             <p class="header__title-text">For Customers</p>
         </div>
-        <section class="container">
-            <div class="header__inner">
-                <div class="header__slogan">
-                    <a href="#" class="header__link"><img src="./img/svg/logo.svg" alt="Logo" class="header__logo"></a>
-                    <button class="header__btn-burger"></button>
-                </div>
+        <div class="container">
+            <div class="header__slogan">
+                <a href="#" class="header__link"><img src="./img/svg/logo.svg" alt="Logo" class="header__logo"></a>
+                <button class="header__btn-burger"></button>
+            </div>
+        </div>
+        <section class="header__inner">
+            <div class="container">
                 <div class="header__content">
                     <div class="header__content-title">
-                        <h1 class="title">Everyone is an <br> Influencer</h1>
+                        <h1 class="title">Everyone is an <br> <span>Influencer</span></h1>
                         <p class="header__content-text">Budss is a payments as a service and WOM engine dedicated to
                             acquisition and retention of customers to your business.</p>
                         <button class="btn">Contact sales</button>
                     </div>
-
-
+                    <div class="header__content-img">
+                        <img src="./img/Maskgroup.png" alt="" class="header__img">
+                    </div>
                 </div>
             </div>
+
         </section>
-        <div class="header__content-img">
-            <img src="./img/backgroun_header.png" alt="backgroun_header" class="header__img">
-        </div>
     </header>
 </body>
 
