--- a/index.html
+++ b/index.html
@@ -25,19 +25,20 @@
             </div>
         </div>
         <section class="header__inner">
-            <div class="container">
-                <div class="header__content">
+            <div class="header__content">
+                <div class="container">
                     <div class="header__content-title">
                         <h1 class="title">Everyone is an <br> <span>Influencer</span></h1>
                         <p class="header__content-text">Budss is a payments as a service and WOM engine dedicated to
                             acquisition and retention of customers to your business.</p>
                         <button class="btn">Contact sales</button>
                     </div>
-                    <div class="header__content-img">
-                        <img src="./img/Maskgroup.png" alt="" class="header__img">
-                    </div>
                 </div>
             </div>
+            <picture class="header__content-img">
+                <source srcset="./img/Girl_max768px.png" alt="Girl" media="(max-width:768px)">
+                <img src="./img/Girl_min768px.png" alt="Girl" class="header__img" media="(min-width:768px)">
+            </picture>
 
         </section>
     </header>
