--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <div class="container">
                 <div class="slogan__container">
                     <a href="#" class="slogan__link"><img src="./img/svg/logo.svg" alt="Logo"></a>
-                    <button href="#" class="slogan__btn-burger"><img src="./img/svg/Burger.svg" alt="burger"></button>
+                    <button class="slogan__btn-burger"><img src="./img/svg/Burger.svg" alt="burger"></button>
                     <button class="btn btn_secondary btn_visible btn_open-menu">Contact sales</button>
-                    <article class="slogan__article">
+                    <div class="slogan__article">
                         <a href="#"><img src="./img/svg/icon_google.svg" alt="icon_google" class="icon-google"></a>
                         <img src="./img/svg/vertical__line.svg" alt="vertical__line">
                         <a href="#"><img src="./img/svg/icon_apple.svg" alt="icon_apple" class="icon-apple"></a>
-                    </article>
+                    </div>
                 </div>
                 <nav class="menu">
                     <button class="menu__btn-close"><img src="./img/svg/Burger_close.svg" alt="burger__close"></button>
@@ -71,8 +71,8 @@
                 </div>
             </div>
             <picture class="initial__picture">
-                <source srcset="./img/Girl_max768px.png" alt="Girl" media="(max-width:768px)">
-                <img src="./img/Girl_min768px.png" alt="Girl" class="initial__img" media="(min-width:768px)">
+                <source srcset="./img/Girl_max768px.png" media="(max-width:768px)">
+                <img src="./img/Girl_min768px.png" alt="Girl" class="initial__img">
             </picture>
         </section>
         <section class="about">
@@ -242,20 +242,20 @@
                         <p class="business__text">Budss is a husle free solution to put your brand on any digital
                             surface including Instagram, Facebook, Twitter and TikTok</p>
                     </div>
-                    <picture class="business__block-right">
-                        <img srcset="./img/svg/Facebook-icon.svg" alt="Facebook-icon" class="business__img">
-                        <img srcset="./img/svg/Instagram-icon.svg" alt="Instagram-icon" class="business__img">
-                        <img srcset="./img/svg/Twitter-icon.svg" alt="Twitter-icon" class="business__img">
+                    <div class="business__block-right">
+                        <img src="./img/svg/Facebook-icon.svg" alt="Facebook-icon" class="business__img">
+                        <img src="./img/svg/Instagram-icon.svg" alt="Instagram-icon" class="business__img">
+                        <img src="./img/svg/Twitter-icon.svg" alt="Twitter-icon" class="business__img">
                         <img src="./img/svg/TikTok-icon.svg" alt="TikTok-icon" class="business__img">
-                    </picture>
+                    </div>
                 </div>
-                <picture class="business__logos">
+                <div class="business__logos">
                     <img src="./img/svg/logo-woo_commerce.svg" alt="logo-woo_commerce" class="business__logo">
                     <img src="./img/svg/logo-shopify.svg" alt="logo-shopify" class="business__logo">
                     <img src="./img/svg/logo-square.svg" alt="logo-square" class="business__logo">
                     <img src="./img/svg/logo-squarespace.svg" alt="logo-squarespace" class="business__logo">
                     <img src="./img/svg/logo-clover.svg" alt="logo-clover" class="business__logo">
-                </picture>
+                </div>
             </div>
         </section>
         <footer class="footer">
@@ -306,7 +306,7 @@
         </div>
         <div class="form">
             <button class="form_close"></button>
-            <form action="" method="get" class="form__user">
+            <form action="#" method="get" class="form__user">
                 <label class="label">
                     <h3 class="ladel-title">Name <span class="ladel-title_orange">*</span></h3>
                     <input type="text" class="data" name="name" placeholder="Enter name" required disabled>
@@ -337,7 +337,7 @@
                         href="#">Terms
                         of Use</a>
                 </p>
-                <button class="btn btn_secondary btn_submit-the-form" type="submit ">Contact sales</button>
+                <button class="btn btn_secondary btn_submit-the-form" type="submit">Contact sales</button>
             </form>
             <div class="form__result">
                 <button class="form_close form_close-result"></button>
